--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,15 +22,14 @@
         android:background="?attr/selectableItemBackground"
         >
 
-        <TextView
-            android:id="@+id/button_text"
+        <TextSwitcher
+            android:id="@+id/text_switcher"
             android:layout_width="0px"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="@string/on"
-            style="@style/TextAppearance.AppCompat.Title.Inverse"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:clipToPadding="false"
             />
 
         <android.support.v7.widget.SwitchCompat
@@ -44,35 +43,52 @@
     </LinearLayout>
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <TextView
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome_text"
-            />
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:animateLayoutChanges="true"
+            >
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/activity_vertical_margin"/>
+            <TextView
+                android:id="@+id/red_warning"
+                style="@style/Base.TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/night_mode_off"
+                android:textColor="@color/warning_color"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                />
 
-        <TextView
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/intro_text"
-            />
+            <TextView
+                style="@style/TextAppearance.AppCompat.Headline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/welcome_text"
+                />
 
-    </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/activity_vertical_margin"/>
 
+            <TextView
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/intro_text"
+                />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
